samples/_failures_safe/1761459646_c149a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1bf73196.c: In function ‘main’:
./samples/SAFE/__tmp_1bf73196.c:164:33: error: expected ‘)’ at end of input
  164 |     strncpy(sm.input, user_input
      |            ~                    ^
      |                                 )
./samples/SAFE/__tmp_1bf73196.c:164:5: error: too few arguments to function ‘strncpy’
  164 |     strncpy(sm.input, user_input
      |     ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_1bf73196.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_1bf73196.c:164:5: error: expected declaration or statement at end of input
  164 |     strncpy(sm.input, user_input
      |     ^~~~~~~
